fix the overflow-x thing

--- a/public/layout.css
+++ b/public/layout.css
@@ -22,7 +22,6 @@
 html, body {
   font-family: 'Actor', sans-serif;
   font-size: 13px;
-  overflow-x: hidden;
   margin: 0;
   padding: 20px 0;
 }
@@ -70,14 +69,22 @@ a:hover {
 ================================================== */
 
 .bg {
-  border-radius: 125px;
   position: absolute;
+  top: 0;
+  right: 0;
+  width: 235px;
+  height: 235px;
+  overflow: hidden;
+  z-index: -1;
+}
+
+.bg img {
+  border-radius: 125px;
   opacity: 0.25;
-  top: -15px;
-  right: -15px;
   width: 250px;
   height: 250px;
-  z-index: -1;
+  position: relative;
+  top: -15px;
   -webkit-filter: grayscale(100%);
 }
 
